--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -16,13 +16,13 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 The Infrastructure Migration Solution has 4 key phases:
 
 xref:Planning_the_migration[Planning the migration]::
-During the planning phase, you assess your source and target environments to ensure that you have sufficient resources for migration. You may choose to schedule the migration in phases or to create migration groups in order to minimize the impact on your users.
+You assess your source and target environments to ensure that you have sufficient resources for migration. You may choose to schedule the migration in phases or to create migration groups in order to minimize the impact on your users.
 
 xref:Preparing_the_migration_environment[Preparing the migration environment]::
-During this phase, you configure your source and target environments and install the required software.
+You configure your source and target environments for migration and install required packages.
 
 xref:Migrating_the_infrastructure[Migrating the infrastructure]::
-During the migration phase, you map the resources of your source environment to your target environment. After creating an infrastructure mapping, you create and run a migration plan.
+You map the resources of your source environment to your target environment. After creating an infrastructure mapping, you create and run a migration plan.
 
 Verifying the migration::
 The completed migration plan displays successfully migrated virtual machines. If errors appear, see xref:Troubleshooting[].
