--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -52,9 +52,9 @@ Migration fails immediately::
 If a migration fails immediately, before the progress bar is displayed, this indicates a configuration error in the environment. Check that conversion hosts or appliances have been configured correctly and that the RHV conversion host credentials have been added to CloudForms. When the cause has been resolved, xref:Retrying_a_Migration_Plan[retry the migration plan].
 
 Migration fails during virtual machine conversion::
-Check the xref:Logs[conversion logs] for the virtual machines that failed to migrate. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
+Check the xref:Logs[conversion logs] for the virtual machines that failed to migrate. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan]. Check that the source virtual machines do not have mounted disks.
 +
-Red Hat Virtualization: Check that the source virtual machine names do not contain spaces or special characters or duplicate existing virtual machine names in the target environment and that they do not have mounted disks.
+Red Hat Virtualization: Check that the source virtual machine names do not contain spaces or special characters or duplicate existing virtual machine names in the target environment.
 +
 OpenStack Platform: Check that the source virtual machines are powered on and that VMware Tools has been installed.
 
