--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_vddk_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_vddk_transformation.adoc
@@ -1,5 +1,5 @@
-[id="Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation"]
-= Creating and configuring RHV conversion hosts for VDDK transformation
+[id="Configuring_conversion_hosts_for_vddk_transformation"]
+= Configuring conversion hosts for VDDK transformation
 
 . Go to link:https://www.vmware.com/support/pubs/[VMware Documentation], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 
@@ -22,7 +22,7 @@ all:
     v2v_vddk_package_name: VMware-vix-disklib-_version_.x86_64.tar.gz
     v2v_vddk_package_url: http://_Manager_FQDN_/VMware-vix-disklib-_version_.x86_64.tar.gz
 ----
-// To do: Confirm with Fabien that colon belongs in inventory file
+
 . Enable the conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
@@ -44,7 +44,7 @@ The link:https://github.com/oVirt/ovirt-ansible-v2v-conversion-host[`ovirt-ansib
 
 [NOTE]
 ====
-If you upgrade your RHV environment, you must run the `conversion_host_enable` playbook again, with the option `-e v2v_vddk_override=true`, to update the IMS packages.
+If you upgrade your target environment, you must run the `conversion_host_enable` playbook again, with the option `-e v2v_vddk_override=true`, to update the IMS packages.
 ====
 
-After creating the RHV conversion hosts, you can  xref:Configuring_rhv_conversion_hosts_in_cloudforms[configure them] in CloudForms.
+After configuring the conversion hosts, you can xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
