--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -32,9 +32,6 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
 
-. Check that no source virtual machine has the same name as a virtual machine in the target environment. A name conflict will cause the migration to fail.
-
 . Unmount ISO images from source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
-. Create and configure the OpenStack Platform conversion appliances.
-// To do - add xref
+. Create and configure the xref:Preparing_the_conversion_hosts[conversion hosts].
