--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -30,12 +30,6 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#red_hat_virtualization_providers[Red Hat Virtualization] environments to CloudForms.
 
-. Validate the source virtual machine names. Virtual machine names may contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
+. Create and configure the xref:Preparing_the_conversion_hosts[conversion hosts].
 
-. Check that no source virtual machine has the same name as a virtual machine in the target environment. A name conflict will cause the migration to fail.
-
-. Unmount ISO images from source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
-
-. Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[RHV hosts].
-
-. Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion hosts].
+. Authenticate the  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[conversion hosts].
