--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -3,7 +3,7 @@
 
 his workflow describes the process of migrating  from VMware to Red Hat OpenStack Platform.
 
-*This image is a placeholder. The storage label will be `Block storage`.*
+*This image is a placeholder. The storage label will be `Block storage`. `Conversion appliance` will change to `Conversion host`.*
 
 image:vmware_to_osp_migration_workflow.png[]
 
@@ -18,11 +18,11 @@ Source virtual machines must be powered on for migration.
 
 . The ESXi host fingerprint is captured for authentication during the virtual machine conversion process, if VDDK transformation is used.
 
-. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion appliances. A conversion appliance is an OpenStack Platform instance with `virt-v2v`, `virt-v2v-wrapper`, and `nbdkit` installed.
+. Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with one or more conversion hosts. (A conversion host is an OpenStack Platform instance with `virt-v2v`, `virt-v2v-wrapper`, and `nbdkit` installed.)
 
-. An OpenStack Platform conversion appliance connects to the source datastore, using `virt-v2v-wrapper`, and streams the disks to be converted to the target block storage, using `virt-v2v`. Volumes are created in the block storage, attached to the conversion appliance, and the source disks are converted.
+. The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, and streams the disks to be converted to the target block storage, using `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
 
-. The volumes are detached from the conversion appliance. CloudForms instructs `virt-v2v-wrapper` to create a target instance in the OpenStack Platform environment with `virt-v2v`. The target instance uses the source virtual machine’s metadata to map to a flavor, a predefined security group, and defined network(s), based on the infrastructure mapping and migration plan settings.
+. The conversion host detaches the volumes from itself and CloudForms instructs `virt-v2v-wrapper` to create a target instance in the OpenStack Platform environment with `virt-v2v`. The target instance uses the source virtual machine’s metadata to map to a flavor, a predefined security group, and defined network(s), based on the infrastructure mapping and migration plan settings.
 
 . The disks mapped in the block storage are attached to the instance and the instance is powered on.
 
