--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -11,9 +11,9 @@ image:vmware_to_rhv_migration_workflow.png[]
 
 . The ESXi host fingerprint is captured for authentication during the virtual machine conversion process, if VDDK transformation is used.
 
-. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the RHV conversion hosts.
+. Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with one or more conversion hosts.
 
-. A RHV conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, and streams the disks to be converted to the target data storage domain, using `virt-v2v`.
+. The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain, using `virt-v2v`, and converts them.
 
 . The virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
 +
@@ -21,6 +21,7 @@ image:vmware_to_rhv_migration_workflow.png[]
 ====
 Depending on the source virtual machine’s power state before migration, the virtual machine is either left powered off or is powered on after migration to Red Hat Virtualization.
 ====
+
 . The converted disks are attached to the target virtual machine.
 
 The migration process is complete and its status is displayed in CloudForms.
