--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
@@ -1,10 +1,10 @@
 // assembly_Migration.adoc
 [id="Canceling_a_migration_plan"]
-= Canceling a Migration Plan
+= Canceling a migration plan
 
-You can cancel a migration plan that has started and displays the progress bars:
+You can cancel a migration plan that has started:
 
-. Click menu:Migration Plans in Progress[_Migration Plan_] to display the migration plan details.
+. In menu:Compute[Migration > Overview], click *Migration Plans in Progress*.
 . Select the migration plan check box and click *Cancel Migration*.
 . Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
 
