--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -3,9 +3,12 @@
 
 The infrastructure mapping maps your source resources to target resources.
 
+Screenshot here
+// To do:
+////
 .Migration screen
 image:Compute_Manage_UI.png[]
-
+////
 [NOTE]
 ====
 If you add or remove providers or provider objects from an infrastructure mapping, the mapping will display xref:Infrastructure_mapping_missing_resources[missing resource errors].
@@ -48,6 +51,8 @@ A target cluster that does not contain a conversion host displays a warning icon
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration > Infrastructure Mappings].
 +
+Screen shot here
+////
 image:infrastructure_mapping_created.png[]
-
+////
 After you have created a successful infrastructure mapping, you are ready to create and run a  xref:Creating_and_running_a_migration_plan[migration plan].
