--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -21,22 +21,15 @@ _vm03_, _vSphere3_
 If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.
 ====
 
-* Check the target datastore to ensure that no virtual machine has the same name as a source virtual machine.
-
-* Unmount ISO images from source virtual machines.
-
-[NOTE]
-====
-A virtual machine will be in the same power state (`on` or `off`) after migration as it was before migration.
-====
-
 .Procedure
 
-. Click menu:Compute[Migration].
+. Click menu:Compute[Migration > Overview].
 
 . Click *Create Migration Plan*.
 
 . Select the infrastructure mapping from the drop-down list.
++
+If you select an OpenStack Platform infrastructure mapping, the *Migration Plan Wizard* displays an additional step, *Instance Properties*.
 
 . Enter the name of your migration plan.
 
@@ -53,15 +46,22 @@ image:Discover_VMs.png[]
 .. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
 .. Click *Import*, browse to the CSV file, and click *Open*.
 
-. Select the virtual machines to migrate and click *Next* to go to *Advanced Options*.
+. Select the virtual machines to migrate and click *Next*.
++
+OpenStack Platform only:
++
+.. In *Instance Properties*, click the pencil icon to edit the network or flavor of each selected virtual machine. If a flavor is too small for the source virtual machine, it is marked with an asterisk (`*`).
+.. Click *Next*.
+
+. The *Advanced Options* screen is displayed.
 +
 [[Advanced_options_screen]]
 .Advanced options
 image:Advanced_Options.png[]
 +
 (Optional) You can select xref:Automating_pre_and_post_migration_tasks_with_ansible[Ansible playbook services] to run on the virtual machines in the migration plan before or after the migration. For example, the xref:Ims_rhel_pre-migration_ansible_playbook_example[RHEL pre-migration playbook] performs several tasks to configure a target RHEL virtual machine. You must create the xref:Creating_an_Ansible_service_catalog_item[Ansible environment and service catalog item] before the migration plan.
-
-. Click *Next* to go to *Schedule*.
++
+Click *Next*.
 
 . Select *Save migration plan to run later* or *Start Migration Immediately* and click *Create*.
 +
@@ -80,11 +80,11 @@ To edit or delete a schedule or plan, click the *More Actions* icon.
 +
 The migration plan may take some time to complete. The migration plan displays progress bars showing the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time.
 +
-To view the migration progress of individual virtual machines, click menu:Migration Plans in Progress[_Migration Plan_] to display the migration plan details.
+To view the migration progress of individual virtual machines, click *Migration Plans in Progress* and click the migration plan name to display the migration plan details.
 +
 [NOTE]
 ====
-During migration, the counter displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the counter that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
+The counter displaying the migration plan progress in menu:Compute[Migration > Overview] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plan overview counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
 ====
 
 . When the migration plan has finished, check the status of the migration plan under *Completed Migrations*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
@@ -100,7 +100,7 @@ If your migration goals change, you can remigrate previously migrated virtual ma
 +
 [NOTE]
 ====
-The source virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
+The source virtual machines cannot be discovered automatically by the migration plan because they are marked in CloudForms as `migrated`.
 ====
 
 . Create and run a new migration plan.
