--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -10,8 +10,12 @@ Prepare the VMware source environment for migration:
 The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
-. Check that no VMware virtual machine has the same name as a virtual machine that already exists in the target environment. A name conflict will cause the migration to fail.
+. Unmount ISO images from the source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
-. Unmount ISO images from the VMware virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
+. If you are migrating to Red Hat Virtualization:
 
-. OpenStack Platform migration only: Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on the virtual machines to capture IP addresses so that they can be associated with OpenStack Platform port groups.
+* Check that source virtual machine names do not duplicate virtual machine names in the target environment. A name conflict will cause the migration to fail.
+
+* Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
+
+. If you are migrating to OpenStack Platform: Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on the virtual machines to capture IP addresses so that they can be associated with OpenStack Platform port groups.
