--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,12 +1,12 @@
 [[Migrating_the_infrastructure]]
 = Migrating the infrastructure
 
-Migrating your infrastructure comprises 2 tasks:
+The migration phase has 2 main tasks:
 
-* xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (clusters, datastores, and networks) of your source environment to your target environment and selecting virtual machines to migrate
+* xref:Creating_an_Infrastructure_Mapping[Mapping the resources] (clusters, datastores, and networks) of your source environment to your target environment
 
 * Creating a xref:Creating_and_running_a_migration_plan[migration plan] with optional xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] that run before or after each virtual machine is migrated
-+
+
 You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress. This option allows you to retry the migration plan immediately or to schedule it in the future.
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
