--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_conversion_hosts.adoc
@@ -1,7 +1,7 @@
 [id="Preparing_the_conversion_hosts"]
 = Preparing the conversion hosts
 
-Before you create the conversion hosts, you must decide xref:Number_of_conversion_hosts[how many conversion hosts] to create and which transformation option (xref:datapath_transformation_options_vddk_ssh[VDDK or SSH]) to use.
+Before you create the conversion hosts, you must decide xref:Number_of_conversion_hosts[how many conversion hosts] to create and whether to use xref:datapath_transformation_options_vddk_ssh[VDDK or SSH] transformation.
 
 [[Number_of_conversion_hosts]]
 .Number of conversion hosts
