--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -48,8 +48,8 @@ If you are migrating previously migrated virtual machines, the migration plan ca
 Incorrect attributes in the virtual machine CSV import file::
 Correct the xref:CSV_file[CSV file], create a new migration plan, import the updated CSV file, and run the migration plan.
 
-Migration fails immediately::
-If a migration fails immediately, before the progress bar is displayed, this indicates a configuration error in the environment. Check that conversion hosts or appliances have been configured correctly and that the RHV conversion host credentials have been added to CloudForms. When the cause has been resolved, xref:Retrying_a_Migration_Plan[retry the migration plan].
+Migration fails immediately (`Denied State`)::
+If a migration fails immediately and a *Denied State* error message appears in *Migration Plans Complete*, this indicates that a conversion host was not configured. Check that xref:Creating_conversion_hosts[conversion hosts are configured] and that the RHV conversion host link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[credentials] have been added to CloudForms. When the cause has been resolved, cancel the migration plan and xref:Retrying_a_Migration_Plan[retry] it.
 
 Migration fails during virtual machine conversion::
 Check the xref:Logs[conversion logs] for the virtual machines that failed to migrate. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan]. Check that the source virtual machines do not have mounted disks.
