--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Canceling_a_migration_plan.adoc
@@ -5,7 +5,7 @@
 You can cancel a migration plan that has started:
 
 . In menu:Compute[Migration > Overview], click *Migration Plans in Progress*.
-. Select the migration plan check box and click *Cancel Migration*.
+. Select a migration plan and click *Cancel Migration*.
 . Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
 
 You can click *Retry* to run the migration plan immediately or *Schedule* to run the migration plan in the future.
