--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -1,18 +1,16 @@
 [id="Configuring_the_maximum_number_of_concurrent_migrations"]
 = Changing the maximum number of concurrent migrations
 
-The default limit for concurrent migrations is `10` for a conversion host and `10` for a provider.
+The default limit for concurrent migrations is `10` for a conversion host and `10`.
 
 To change the default limit for the conversion host, click menu:Compute[Migration > Migration Settings] and select the new limit for concurrent migrations.
+
+This setting can be adjusted to throttle the migration process. If the maximum number of concurrent migrations is increased, the virtual machines that are queued to migrate will migrate in greater numbers. If the number is reduced, migration plans in progress will complete and future migration plans will reflect the lower number of concurrent migrations.
 
 [IMPORTANT]
 ====
 The maximum number of concurrent virtual machine migrations per conversion host is `20` for both VDDK and SSH. The SSH limitation applies only to RHV 4.2.5, not to later versions of RHV.
 ====
-
-Questions - Does SSH with a later RHV version have another limit?
-
-Is the user no longer able to set maximum number of current migrations for a provider? Or do we provide the rails console command?
 
 // To do: What about provider?
 ////
