--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -3,20 +3,15 @@
 
 The infrastructure mapping maps your source resources to target resources.
 
-Screenshot here
-// To do:
-////
-.Migration screen
-image:Compute_Manage_UI.png[]
-////
+.Infrastructure Mappings screen
+image:Infrastructure_mappings_screen.png[]
+
 [NOTE]
 ====
-If you add or remove providers or provider objects from an infrastructure mapping, the mapping will display xref:Infrastructure_mapping_missing_resources[missing resource errors].
-
 Red Hat Virtualization only: Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping will display a xref:Infrastructure_mapping_missing_networks[missing networks error].
 ====
 
-. Click menu:Compute[Migration > Overview].
+. Click menu:Compute[Migration > Infrastructure Mapping].
 . Click *Create Infrastructure Mapping*.
 . Enter the name of your mapping, an optional description, select a *Target Provider*, and click *Next*.
 
@@ -50,9 +45,10 @@ A target cluster that does not contain a conversion host displays a warning icon
 . If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Troubleshooting[].
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration > Infrastructure Mappings].
-+
-Screen shot here
-////
-image:infrastructure_mapping_created.png[]
-////
+
+[NOTE]
+====
+If you add or remove providers or provider objects from an infrastructure mapping, the mapping will display xref:Infrastructure_mapping_missing_resources[missing resource errors].
+====
+
 After you have created a successful infrastructure mapping, you are ready to create and run a  xref:Creating_and_running_a_migration_plan[migration plan].
