--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -3,18 +3,18 @@
 
 .Red Hat Virtualization
 
-Select one or more hosts in your Red Hat Virtualization environment to use as conversion hosts.
-
-You are ready to configure each conversion host for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
+. Select one or more hosts in your Red Hat Virtualization environment to use as conversion hosts.
+. Configure each conversion host for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
 
 .OpenStack Platform
 
 . Download the OpenStack Platform conversion appliance.
-. Deploy the conversion appliance as an instance.
+. Upload the OpenStack Platform conversion appliance to Glance storage.
+. Deploy the conversion appliance as an instance (conversion host).
 +
 [NOTE]
 ====
-The conversion appliance instance has the following requirements:
+The conversion host has the following requirements:
 
 * 4 vCPUs
 * 8 GB RAM
@@ -22,3 +22,5 @@ The conversion appliance instance has the following requirements:
 * /var/tmp (1 GB for each conversion)
 * /var/logs (5 GB)
 ====
+
+. Configure each conversion host for xref:Configuring_conversion_hosts_for_vddk_transformation[VDDK] or xref:Configuring_conversion_hosts_for_ssh_transformation[SSH] transformation.
