--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,6 +1,14 @@
 [id='Creating_and_running_a_migration_plan']
 = Creating and running a migration plan
 
+Creating and running a migration plan has the following steps and options:
+
+. Select an infrastructure mapping.
+. Import the source virtual machines as a CSV file or select them manually from a list.
+. (OpenStack Platform only) Select a network and flavor for each virtual machine.
+. (Optional) Select pre- and post-migration Ansible playbooks to run on each virtual machine.
+. Run the migration plan immediately or in the future.
+
 .Prerequisites
 
 * [[CSV_file]]Create a CSV file listing the source virtual machines if you are migrating a large number of virtual machines or if you are xref:Remigrating_Virtual_Machines[remigrating previously migrated virtual machines].
@@ -21,9 +29,13 @@ _vm03_, _vSphere3_
 If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.
 ====
 
+* Set up the xref:Creating_an_Ansible_service_catalog_item[Ansible environment and create service catalog items] if you wish to run automated pre- and post-migration tasks.
+
 .Procedure
 
 . Click menu:Compute[Migration > Overview].
++
+image:Migration_overview_screen.png[]
 
 . Click *Create Migration Plan*.
 
@@ -59,7 +71,7 @@ OpenStack Platform only:
 .Advanced options
 image:Advanced_Options.png[]
 +
-(Optional) You can select xref:Automating_pre_and_post_migration_tasks_with_ansible[Ansible playbook services] to run on the virtual machines in the migration plan before or after the migration. For example, the xref:Ims_rhel_pre-migration_ansible_playbook_example[RHEL pre-migration playbook] performs several tasks to configure a target RHEL virtual machine. You must create the xref:Creating_an_Ansible_service_catalog_item[Ansible environment and service catalog item] before the migration plan.
+(Optional) Select xref:Automating_pre_and_post_migration_tasks_with_ansible[Ansible playbook services] to run on the virtual machines in the migration plan before or after the migration. For example, the xref:Ims_rhel_pre-migration_ansible_playbook_example[RHEL pre-migration playbook] performs several tasks to configure a target RHEL virtual machine.
 +
 Click *Next*.
 
@@ -87,7 +99,7 @@ To view the migration progress of individual virtual machines, click *Migration 
 The counter displaying the migration plan progress in menu:Compute[Migration > Overview] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plan overview counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
 ====
 
-. When the migration plan has finished, check the status of the migration plan under *Completed Migrations*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
+. When the migration plan has finished, check the status of the migration plan under *Migration Plans Complete*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
 
 [[Remigrating_Virtual_Machines]]
 .Remigrating virtual machines
@@ -100,7 +112,7 @@ If your migration goals change, you can remigrate previously migrated virtual ma
 +
 [NOTE]
 ====
-The source virtual machines cannot be discovered automatically by the migration plan because they are marked in CloudForms as `migrated`.
+The source virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms database as `migrated`.
 ====
 
 . Create and run a new migration plan.
