--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -1,7 +1,7 @@
 [id="Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation"]
 = Creating and Configuring RHV Conversion Hosts for SSH Transformation
 
-. On the Manager machine, create `/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml`  with the following variables:
+. On the Manager machine, create +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+ with the following variables:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
