--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
@@ -9,7 +9,7 @@
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
-. On the Manager machine, create  `/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml`  with the following variables:
+. On the Manager machine, create  +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml+ with the following variables:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
