update to workflows

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -7,7 +7,7 @@ image:vmware_to_rhv_migration_workflow.png[]
 
 . After creating an infrastructure mapping and a migration plan, you run the migration plan.
 
-. CloudForms locates the virtual machines to be migrated based on the infrastructure mapping.
+. CloudForms uses the migration plan to locate the virtual machines to be migrated.
 
 . The ESXi host fingerprint is captured for authentication during the virtual machine conversion process, if VDDK transformation is used.
 
