--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -9,7 +9,7 @@ image:vmware_to_osp_migration_workflow.png[]
 
 . After creating an infrastructure mapping and a migration plan, you run the migration plan.
 
-. CloudForms locates the virtual machines to be migrated based on the infrastructure mapping.
+. CloudForms uses the migration plan to locate the virtual machines to be migrated.
 +
 [NOTE]
 ====
