--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -5,7 +5,7 @@ Prepare the OpenStack Platform environment for migration:
 
 . TBD: Specific recommendations for OpenStack Platform deployment
 // To do
-. Ensure that the datastore has sufficient space for the virtual machines you are migrating.
+. Ensure that the storage backends have sufficient space for the virtual machines you are migrating.
 
 . Set the BIOS settings of the physical hosts for optimal performance, rather than power-saving, according to the vendor's recommendations and disable the C1E halt state, if applicable.
 
@@ -21,14 +21,7 @@ Prepare the OpenStack Platform environment for migration:
 
 . Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map the source virtual machine to an existing flavor.
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-create-volume[block storage volumes].
-+
-[NOTE]
-====
-IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
-====
-
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.6.4 or later.
+. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7.0 or later.
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
 
