--- a/doc-Scripting_Actions/cfme/master.adoc
+++ b/doc-Scripting_Actions/cfme/master.adoc
@@ -15,6 +15,8 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 include::topics/preface.adoc[]
 
+include::topics/common/Updates_to_ruby.adoc[]
+
 include::topics/chap_automation_model.adoc[]
 
 include::topics/chap_invoking_automate.adoc[]
