--- a/doc-Scripting_Actions/miq/index.adoc
+++ b/doc-Scripting_Actions/miq/index.adoc
@@ -15,6 +15,8 @@ include::common/attributes/miq.adoc[]
 :numbered:
 include::doc-Scripting_Actions/miq/topics/preface.adoc[]
 
+include::doc-Scripting_Actions/miq/topics/common/Updates_to_ruby.adoc[]
+
 include::doc-Scripting_Actions/miq/topics/chap_automation_model.adoc[]
 
 include::doc-Scripting_Actions/miq/topics/chap_invoking_automate.adoc[]
