edited following SME review

--- a/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
+++ b/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
@@ -3,12 +3,9 @@
 
 Renaming database-only appliances in a high availability setup must be performed in a specific order to maintain database replication.
 
-//Are all steps in the appliance console menu?
-
 . Confirm and note the hostnames of the active database (primary) appliance and the standby database appliance in the appliance console. 
 +
 You can verify this from the appliance summary screen of a database-only appliance, where the status for *Local Database Server* shows _primary_ or _standby_, for example:
-//Is there an easier way than logging into the appliance console of one appliance and verifying if "Local Database Server" says "running (primary)" or "running (standby)"?
 +
 ----
 ...
@@ -19,11 +16,10 @@ Local Database Server:   running (primary)
 . Stop the failover monitor on the non-database {product-title_short} appliances:
 .. In the appliance console menu, select *Configure Application Database Failover Monitor*. 
 .. Select *Stop Database Failover Monitor*.
-. Reset the standby by deleting the database:
-//Configure Database Replication > Configure Server as Standby? Then ??
+. Stop the database service on the standby database-only appliance:
 +
 ----
-# COMMAND
+# systemctl stop rh-postgresql95-postgresql
 ----
 +
 . Stop `evmserverd` on each {product-title_short} (non-database) appliance:
@@ -35,19 +31,13 @@ Local Database Server:   running (primary)
 . Rename the database-only appliance and restart that appliance:
 .. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
 .. Restart the renamed appliance.
-//Rename, then restart the standby if desired now?
+//Rename, then restart the standby if desired now? [Dayle: need to confirm the goal with bug reporter.]
 +
-. On all appliances, change the database to the right hostname in vmdb/config/database.yml:
-+
-----
-# COMMAND
-----
-+
-. Restart the appliances:
-//Does order of restarting matter? Which appliances?
+. On all appliances, change the host key to the primary database server's new hostname in `vmdb/config/database.yml`.
+. Start `evmserverd` on each {product-title_short} (non-database) appliance:
 +
 ----
-# COMMAND
+# systemctl start evmserverd
 ----
 +
 [IMPORTANT]
@@ -55,9 +45,7 @@ Local Database Server:   running (primary)
 If you are using non-dedicated database appliances, also stop `evmserverd` on those appliances before renaming it and reconfigure the `database.yml` before restarting.
 ====
 
-At this point, all appliances should be able to connect to the database. 
-
-//Add a step for the user to test this.
+After `evmserverd` has started successfully, all appliances will be able connect to the database. 
 
 After that you will have to reconfigure high availability from xref:configuring_primary_db[] 
 //(part 2.3 in Installation - All steps from 2.3 to 2.6?).
