add infra provider query info

--- a/doc-REST_API/topics/Queries.adoc
+++ b/doc-REST_API/topics/Queries.adoc
@@ -70,3 +70,9 @@ Get a specific provision request with expanded details on the associated provisi
 ------
 GET /api/provision_requests/120?expand=tasks
 ------
+
+Query infrastructure provider information:
+
+------
+GET /api/providers/120?expand=resources,lans,networks,folders
+------
